fixed profile page alignment

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -12,7 +12,7 @@
 } */
 @layer base {
   body {
-    @apply w-screen p-0 box-border bg-white text-black dark:bg-black dark:text-white min-h-screen
+    @apply w-screen p-0 box-border bg-white text-black dark:bg-black dark:text-white min-h-screen flex justify-center
   }
   html {
     @apply bg-white dark:bg-black
